# Genrative-AI-Development

./: readme.md
step01_apis/00_concept/: readme.md
step01_apis/01_poetry_project_setup/: readme.md
step01_apis/01_poetry_project_setup/poetry_porject/: pyproject.toml
step01_apis/01_poetry_project_setup/poetry_porject/poetry_porject/: main.py
step01_apis/02_request/http_requests/: README.md  pyproject.toml
step01_apis/02_request/http_requests/http_requests/: main.ipynb  main.py
