[tool.poetry]
name = "http-requests"
version = "0.1.0"
description = ""
authors = ["muhammadhamzafarooq <mhamza2021999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
types-requests = "^2.31.0.20240403"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
